# rag-pipeline-achilles

./: .env.sample  .gitignore  README.md  ask.py  eval.jsonl  ingest.py  pyproject.toml  requirements.txt  results.jsonl  results_no_reranker.jsonl
etc/: docker-compose.yml
notebooks/: Metrics.ipynb
prompts/: system_prompt.txt  tools.json
src/: models.py
src/inference/: ask_service.py  reranker.py  search.py
src/ingest/: chunker.py  parser.py  pdf_downloader.py
src/shared/: embeddings.py  environment.py  qdrant_repository.py
