[tool.poetry]
name = "achilles"
version = "0.1.0"
description = ""
authors = ["Jorge <jorgealro1997@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13, <3.14"
pymupdf = ">=1.26.4,<2.0.0"
transformers = ">=4.56.1,<5.0.0"
torch = ">=2.5.1,<3.0.0"
qdrant-client = "^1.15.1"
requests = "^2.31.0"
openai = "^1.107.1"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
notebook = ">=7.4.5,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"